--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^27.5.1",
+    "@types/node": "^17.0.33",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "boxicons": "^2.1.1",
@@ -14,9 +18,11 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-leaflet": "^3.2.2",
     "react-scripts": "5.0.0",
     "socket.io-client": "^4.4.0",
+    "typescript": "^4.6.4",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -42,5 +48,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.7.10",
+    "@types/luxon": "^2.3.2"
   }
 }
